# quiver

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  devel.sh  notes.txt  plot-settlements.py  qdrbench
docs/: implementations.md
exec/: amqp-test-broker  amqp-test-broker.in  arrow-activemq-artemis-jms.in  arrow-activemq-jms.in  arrow-qpid-jms.in  arrow-qpid-messaging-cpp.cpp  arrow-qpid-messaging-python.in  arrow-qpid-proton-cpp.cpp  arrow-qpid-proton-python.in  arrow-rhea.in  arrow-vertx-proton.in  quiver-activemq-artemis-jms.in  quiver-activemq-jms.in  quiver-arrow-activemq-artemis-jms.in  quiver-arrow-activemq-jms.in  quiver-arrow-qpid-jms.in  quiver-arrow-qpid-messaging-cpp.cpp  quiver-arrow-qpid-messaging-python.in  quiver-arrow-qpid-proton-c.c  quiver-arrow-qpid-proton-cpp.cpp  quiver-arrow-rhea.in  (+16 more)
subrepos/plano/: .gitignore  .gitrepo  .travis.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
subrepos/plano/.github/workflows/: main.yaml
subrepos/plano/docs/: conf.py  index.rst
subrepos/plano/python/: bullseye.py  bullseye.strings  bullseye_tests.py  plano.py  plano_tests.py
subrepos/plano/scripts/: devel.sh  test  test-bootstrap.dockerfile  test-centos-7.dockerfile  test-centos-8.dockerfile  test-fedora.dockerfile  test-ubuntu.dockerfile
subrepos/plano/src/plano/: __init__.py  commands.py  main.py  tests.py
subrepos/plano/src/plano/testproject/: Planofile
subrepos/plano/src/plano/testproject/src/chucker/: tests.py
subrepos/plano/test-project/: Planofile
subrepos/plano/test-project/python/: chucker_tests.py
(+136 files in other folders)
