[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "plano"
version = "1.0.0"
authors = [ { name = "Justin Ross", email = "jross@apache.org" } ]
description = "Python functions for writing shell-style system scripts"
license = { file = "LICENSE.txt" }
readme = "README.md"
classifiers = [ "License :: OSI Approved :: Apache Software License" ]
requires-python = ">=3.7"
dependencies = [ "PyYAML" ]

[project.scripts]
plano = "plano.commands:plano"
planosh = "plano.commands:planosh"
plano-test = "plano.commands:plano_test"
plano-self-test = "plano.tests:main"

[project.urls]
"Homepage" = "https://github.com/ssorj/plano"
"Bug Tracker" = "https://github.com/ssorj/plano/issues"
